
Update: June 28th 2016
==================================================
->Added functionality for energy resolution to be determined when the user has given the "SIGMA" meaning to a parameter instead of FWHM (gaussian relation used)
->Overloaded Uniformity::ceilPowerTen() in include/UniformityFunctions.h to increment by scalar multiples of powers of 10; also just powers of 10 still avaliable

Update: June 23rd 2016
==================================================
->Tweaking Uniformity::VisualizeUniformity::storeCanvasHisto2D() such that the produced trapezoidal map defaults to "top view"
->However TCanvas::SetTheta() and TCanvas::SetPhi() don't seem to be working correctly in the code but only in the ROOT environment

Update: June 22nd 2016
==================================================
->Added method Uniformity::VisualizeUniformity::save2png() for saving produced TCanvas objects to *.png files
->Added new data member Uniformity::RunSetup::bVisPlots_AutoSaving for user to toggle call to VisualizeUniformity::save2png() on/off
->Updated Uniformity::ParameterLoaderRun::loadRunParameters() to search for field Visualize_AutoSaveImages to set RunSetup::bVisPlots_AutoSaving with
->Updated config/configRun.cfg, config/configRun_Template_Rerun.cfg, and config/configRun_Template_Series.cfg to have the Visualize_AutoSaveImages present

Update: June 21st 2016
==================================================
->Changed Uniformity::VisualizeUniformity::storeCanvasGraph2D from 3 arguments to 4 arguments; last argument is a boolean which allows user to choose to normalize the output (normalization to average of the obserable)
->Added templated operator: template<typename T1, typename T2, typename T3>std::tuple<T1, T2, T3> operator+ to include/UniformityUtilityOperators.h